[project]
name = "api-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.0",
    "generativeai>=0.0.1",
    "google-genai>=1.54.0",
    "google-generativeai>=0.8.5",
    "pycountry>=24.6.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]
